# schrandr

./: CMakeLists.txt  FindJSONCpp.cmake  README.md  cmdline_args.cpp  cmdline_args.h  config.cpp  config.h  config_structure.md  defs.h  edid.cpp  edid.h  empty_setups.json  jsonadapter.cpp  jsonadapter.h  logging.cpp  logging.h  mode.cpp  mode.h  mode_change.cpp  mode_change.h  modemanager.cpp  modemanager.h  monitor_setup.cpp  monitor_setup.h  pid_file_holder.cpp  pid_file_holder.h  schrandr.cpp  schrandr.h  screen.cpp  screen.h  util.h  xmanager.cpp  xmanager.h
tests/: CMakeLists.txt  tests.cpp
